test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/extern_variable_initializer.plx
pub fn main(none) i32 {
    #  An extern variable cannot have an initializer 
    extrn i: i32 = 0
    return i
}
